schema/testdata/errors/default_invalid_expression.keel
model Post {
    fields {
        //expect-error:36:49:E051:default expression doesn't support operators
        published Boolean @default(true == false)
    }
}
